--- a/kurtosis_package/devnet_params.yaml
+++ b/kurtosis_package/devnet_params.yaml
@@ -1,8 +1,8 @@
 deployments:
   - type: EigenLayer
     ref: v0.4.2-mainnet-pepe
-    # This creates a single strategy named strategy1, which uses a mock-token
-    # strategies: [strategy1]
+    # This creates a single strategy named MockETH, which uses a mock-token
+    strategies: [MockETH]
     # operators:
     #   # TODO: rename `$keystores` to `$keys`
     #   # TODO: autogenerate keystore from operator name
@@ -10,7 +10,7 @@ deployments:
     #     private_key: $keystores.operator1_ecdsa_keystore.private_key
     #     strategies:
     #       # strategy_name: number_of_shares
-    #       strategy1: 100000000000000000
+    #       MockETH: 100000000000000000
 
 ethereum_package:
   participants:
