--- a/kurtosis_package/devnet_params.yaml
+++ b/kurtosis_package/devnet_params.yaml
@@ -3,14 +3,20 @@ deployments:
     ref: v0.4.2-mainnet-pepe
     # This creates a single strategy named MockETH, which uses a mock-token
     strategies: [MockETH]
-    # operators:
-    #   # TODO: rename `$keystores` to `$keys`
-    #   # TODO: autogenerate keystore from operator name
-    #   - address: $keystores.operator1_ecdsa_keystore.address
-    #     private_key: $keystores.operator1_ecdsa_keystore.private_key
-    #     strategies:
-    #       # strategy_name: number_of_shares
-    #       MockETH: 100000000000000000
+    operators:
+      # TODO: rename `$keystores` to `$keys`
+      # TODO: autogenerate keystore from operator name
+      - name: operator1
+        keystore: operator1_ecdsa_keystore
+        # strategies:
+        #   # strategy_name: number_of_shares
+        #   MockETH: 100000000000000000
+
+keystores:
+  - name: operator1_ecdsa_keystore
+    type: ecdsa
+  - name: operator1_bls_keystore
+    type: bls
 
 ethereum_package:
   participants:
@@ -19,3 +25,5 @@ ethereum_package:
   additional_services:
     - blockscout
     - dora
+  network_params:
+    network_id: "31337"
