--- a/examples/incredible_squaring.yaml
+++ b/examples/incredible_squaring.yaml
@@ -28,7 +28,7 @@ services:
         number: 8090
         transport_protocol: "TCP"
         application_protocol: "http"
-        wait: "10s"
+    # NOTE: aggregator key-pair is hardcoded in the deployment scripts
     address: "0xa0Ee7A142d267C1f36714E4a8F75612F20a79720"
     input:
       /usr/src/app/config-files/:
@@ -44,6 +44,12 @@ services:
 
   - name: "operator1"
     image: "ghcr.io/layr-labs/incredible-squaring/operator/cmd/main.go:latest"
+    ports:
+      node:
+        number: 8080
+        transport_protocol: "TCP"
+        application_protocol: "http"
+        wait: "3m"
     input:
       /usr/src/app/config-files/:
         - operator-config
@@ -89,10 +95,10 @@ artifacts:
         ecdsa_private_key_store_path: /usr/src/app/config-files/1.ecdsa.key.json
         bls_private_key_store_path: /usr/src/app/config-files/1.bls.key.json
         aggregator_server_ip_port_address: {{.services.aggregator.ip_address}}:8090
-        eigen_metrics_ip_port_address: "10"
+        eigen_metrics_ip_port_address: "0.0.0.0:8081"
         enable_metrics: False
-        node_api_ip_port_address: "12"
-        enable_node_api: False
+        node_api_ip_port_address: "0.0.0.0:8080"
+        enable_node_api: True
         register_operator_on_startup: False
         token_strategy_addr: {{.token_strategy_addr}}
 
