--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -15,25 +15,24 @@ env:
 
 
 jobs:
-  # TODO: fix package when running geth+lh
-  # run:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - name: Checkout Repository
-  #       uses: actions/checkout@v4
+  run:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout Repository
+        uses: actions/checkout@v4
 
-  #     - name: Setup Kurtosis
-  #       run: |
-  #         echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
-  #         sudo apt update
-  #         sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
-  #         kurtosis analytics disable
-  #         echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
-  #       shell: bash
+      - name: Setup Kurtosis
+        run: |
+          echo "deb [trusted=yes] https://apt.fury.io/kurtosis-tech/ /" | sudo tee /etc/apt/sources.list.d/kurtosis.list
+          sudo apt update
+          sudo apt install kurtosis-cli=${{ env.KURTOSIS_VERSION }}
+          kurtosis analytics disable
+          echo "$(dirname $(which kurtosis))" >> $GITHUB_PATH
+        shell: bash
 
-  #     - name: Run Package with default args
-  #       run: |
-  #         kurtosis run ./kurtosis_package
+      - name: Run Package with default args
+        run: |
+          kurtosis run ./kurtosis_package
 
   run_examples:
     runs-on: ubuntu-latest
