fix: use erigon instead of reth

--- a/examples/hello_world.yaml
+++ b/examples/hello_world.yaml
@@ -65,8 +65,7 @@ keystores:
 
 ethereum_package:
   participants:
-    - el_type: reth
-      cl_type: teku
+    - el_type: erigon
   additional_services:
     - blockscout
     - dora
