--- a/cli/Makefile
+++ b/cli/Makefile
@@ -1,4 +1,4 @@
-.PHONY: install deps
+.PHONY: deps install start_devnet stop_devnet
 
 deps:
 	@echo "Installing dependencies..."
@@ -8,3 +8,12 @@ install:
 	@echo "Installing package..."
 	go install ./...
 	@-asdf reshim 2> /dev/null
+
+devnet.yaml:
+	go run cmd/devnet/main.go init
+
+start_devnet: devnet.yaml
+	go run cmd/devnet/main.go start
+
+stop_devnet: devnet.yaml
+	go run cmd/devnet/main.go stop
