--- a/kurtosis_package/devnet_params.yaml
+++ b/kurtosis_package/devnet_params.yaml
@@ -4,18 +4,17 @@ deployments:
     # This creates a single strategy named MockETH, which uses a mock-token
     strategies: [MockETH]
     operators:
-      # TODO: rename `$keystores` to `$keys`
       # TODO: autogenerate keystore from operator name
       - name: operator1
-        keystore: operator1_ecdsa_keystore
+        keys: operator1_ecdsa_keys
         strategies:
           # strategy_name: number_of_tokens
           MockETH: 100000000000000000
 
-keystores:
-  - name: operator1_ecdsa_keystore
+keys:
+  - name: operator1_ecdsa_keys
     type: ecdsa
-  - name: operator1_bls_keystore
+  - name: operator1_bls_keys
     type: bls
 
 ethereum_package:
