feat: add example syntax

--- a/examples/hello_world.yaml
+++ b/examples/hello_world.yaml
@@ -36,6 +36,8 @@ services:
   - name: "operator"
     # NOTE: this image is build locally by the Makefile
     image: "hello_world"
+    build_context: "./hello-world-avs"
+    build_file: Dockerfile
     input:
       /app/contracts/deployments/core/: eigenlayer_addresses
       /app/contracts/deployments/hello-world/: avs_addresses
@@ -48,6 +50,8 @@ services:
   - name: "traffic-generator"
     # NOTE: this image is build locally by the Makefile
     image: "hello_world"
+    build_context: "./hello-world-avs"
+    build_file: Dockerfile
     input:
       /app/contracts/deployments/core/: eigenlayer_addresses
       /app/contracts/deployments/hello-world/: avs_addresses
