fix: use correct path in example

--- a/examples/hello_world.yaml
+++ b/examples/hello_world.yaml
@@ -36,8 +36,7 @@ services:
   - name: "operator"
     # NOTE: this image is build locally by the Makefile
     image: "hello_world"
-    build_context: "./hello-world-avs"
-    build_file: Dockerfile
+    build_context: "examples/hello-world-avs"
     input:
       /app/contracts/deployments/core/: eigenlayer_addresses
       /app/contracts/deployments/hello-world/: avs_addresses
@@ -50,8 +49,8 @@ services:
   - name: "traffic-generator"
     # NOTE: this image is build locally by the Makefile
     image: "hello_world"
-    build_context: "./hello-world-avs"
-    build_file: Dockerfile
+    build_context: "examples/hello-world-avs"
+    build_file: "examples/hello-world-avs/Dockerfile"
     input:
       /app/contracts/deployments/core/: eigenlayer_addresses
       /app/contracts/deployments/hello-world/: avs_addresses
