--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -113,4 +113,4 @@ jobs:
           go-version: ${{ env.GO_VERSION }}
       - name: Run go test
         working-directory: ./cli
-        run: go test -v ./...
+        run: make test
