chore: simplify start & stop targets

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,7 +42,7 @@ jobs:
       fail-fast: false
       matrix:
         example:
-          - kurtosis_start_devnet
+          - kurtosis_start
           - kurtosis_incredible_squaring
           - kurtosis_hello_world
     steps:
