--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,9 +42,9 @@ jobs:
       fail-fast: false
       matrix:
         example:
-          - devnet
-          - incredible_squaring
-          - hello_world
+          - kurtosis_start
+          - kurtosis_incredible_squaring
+          - kurtosis_hello_world
     steps:
       - name: Checkout Repository
         uses: actions/checkout@v4
@@ -59,7 +59,7 @@ jobs:
         shell: bash
 
       - name: Run example '${{ matrix.example }}'
-        run: make start_${{ matrix.example }}
+        run: make ${{ matrix.example }}
 
   kurtosis_lint:
     runs-on: ubuntu-latest
@@ -76,7 +76,7 @@ jobs:
         shell: bash
 
       - name: Kurtosis Lint
-        run: kurtosis lint ./kurtosis_package
+        run: make kurtosis_lint
 
   # Golang CI
   go_fmt:
