fix: use nethermind instead of erigon

--- a/examples/incredible_squaring.yaml
+++ b/examples/incredible_squaring.yaml
@@ -104,6 +104,6 @@ artifacts:
 
 ethereum_package:
   participants:
-    - el_type: erigon
+    - el_type: nethermind
   additional_services:
     - blockscout
