--- a/examples/hello_world.yaml
+++ b/examples/hello_world.yaml
@@ -65,7 +65,7 @@ keys:
 
 ethereum_package:
   participants:
-    - el_type: erigon
+    - el_type: nethermind
   additional_services:
     - blockscout
   network_params:
