--- a/examples/hello_world.yaml
+++ b/examples/hello_world.yaml
@@ -33,9 +33,9 @@ deployments:
       avs_addresses: "deployments/hello-world/31337.json"
 
 services:
-  - name: "operator"
+  - name: operator
     # NOTE: this image is build locally by the Makefile
-    image: "hello_world"
+    image: hello_world
     input:
       /app/contracts/deployments/core/: eigenlayer_addresses
       /app/contracts/deployments/hello-world/: avs_addresses
@@ -45,9 +45,9 @@ services:
       PRIVATE_KEY: "$keys.operator_ecdsa_keys.private_key"
     cmd: ["npm", "run", "start:operator"]
 
-  - name: "traffic-generator"
+  - name: traffic-generator
     # NOTE: this image is build locally by the Makefile
-    image: "hello_world"
+    image: hello_world
     input:
       /app/contracts/deployments/core/: eigenlayer_addresses
       /app/contracts/deployments/hello-world/: avs_addresses
