--- a/kurtosis_package/devnet_params.yaml
+++ b/kurtosis_package/devnet_params.yaml
@@ -19,6 +19,6 @@ keys:
 
 ethereum_package:
   participants:
-    - el_type: erigon
+    - el_type: nethermind
   additional_services:
     - blockscout
