fix: use besu instead of nethermind
Nethermind seems to fail on the devnet_params.yaml config

--- a/examples/hello_world.yaml
+++ b/examples/hello_world.yaml
@@ -65,7 +65,7 @@ keys:
 
 ethereum_package:
   participants:
-    - el_type: nethermind
+    - el_type: besu
   additional_services:
     - blockscout
   network_params:
