--- a/kurtosis_package/devnet_params.yaml
+++ b/kurtosis_package/devnet_params.yaml
@@ -19,6 +19,6 @@ keys:
 
 ethereum_package:
   participants:
-    - el_type: nethermind
+    - el_type: besu
   additional_services:
     - blockscout
