feat: add nethermind client if it wasn't added

--- a/src/config/default_config.yaml
+++ b/src/config/default_config.yaml
@@ -22,7 +22,7 @@ keys:
 # ethereum-package configuration
 ethereum_package:
   participants:
-    - el_type: erigon
+    - el_type: besu
   additional_services:
     - blockscout
   network_params:
