--- a/examples/hello_world.yaml
+++ b/examples/hello_world.yaml
@@ -55,7 +55,7 @@ services:
       # This expands to the RPC node's URL
       RPC_URL: "$http_rpc_url"
       PRIVATE_KEY: "$keys.traffic_generator_ecdsa_keys.private_key"
-    cmd: ["sh", "-c", "sleep 30 ; npm run start:traffic"]
+    cmd: ["npm", "run", "start:traffic"]
 
 keys:
   - name: operator_ecdsa_keys
@@ -65,7 +65,7 @@ keys:
 
 ethereum_package:
   participants:
-    - el_type: erigon
+    - el_type: besu
   additional_services:
     - blockscout
   network_params:
