--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,6 +61,9 @@ jobs:
       - name: Run example '${{ matrix.example }}'
         run: make ${{ matrix.example }}
 
+      - name: Check example is still running
+        run: make check_devnet
+
   kurtosis_lint:
     runs-on: ubuntu-latest
     steps:
